--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form id="fishForm">
         <label for="fishID">Fish ID:</label>
         <input type="text" id="fishID" name="fishID" required>
-        <!-- <span id="fishIDError" class="error"></span> Error message container -->
+        <span id="fishIDError" class="error"></span> <!-- Error message container -->
         <button type="submit">Get Fish Information</button>
     </form>
 
@@ -29,16 +29,16 @@
     <script src="script.js"></script>
     <script>
         // Form validation
-        // document.getElementById('fishForm').addEventListener('submit', function (event) {
-        //     var fishIDInput = document.getElementById('fishID');
-        //     var fishIDError = document.getElementById('fishIDError');
-        //     if (fishIDInput.value.trim() === '') {
-        //         fishIDError.textContent = 'Fish ID is required';
-        //         event.preventDefault(); // Prevent form submission
-        //     } else {
-        //         fishIDError.textContent = ''; // Clear error message
-        //     }
-        // });
+        document.getElementById('fishForm').addEventListener('submit', function (event) {
+            var fishIDInput = document.getElementById('fishID');
+            var fishIDError = document.getElementById('fishIDError');
+            if (fishIDInput.value.trim() === '') {
+                fishIDError.textContent = 'Fish ID is required';
+                event.preventDefault(); // Prevent form submission
+            } else {
+                fishIDError.textContent = ''; // Clear error message
+            }
+        });
     </script>
 </body>
 
